<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Screen 1 - welcome screen -->
    <string name="app_name">PlentyOfDog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeTo">Welcome to</string>
    <string name="PlentyOfDog">Plenty of Dog</string>
    <string name="WhatsYourName">Let\'s start with your name</string>
    <string name="next">Next</string>
    <string name="title_activity_profile_build">ProfileBuild</string>
    <string name="FirstTime">Since this is your first time, lets build yourself a profile</string>

    <!-- Screen 2 profile builder -->
    <string name="LetsBuildYourProfile">Lets build your profile!</string>
    <string name="Age">Age</string>
    <string name="Hometown">Hometown</string>
    <string name="YOE">Years Of Experience</string>
    <string name="description">Short description of yourself</string>
    <string name="title_activity_dog_filter">DogFilter</string>

    <!-- Screen 3 Pick your favourites -->
    <string name="AnyParticularDog">Any particular Dog you\'d prefer to display?</string>
    <string name="displayAll">Display all</string>
    <string name="smallDog">Small</string>
    <string name="mediumDog">Medium</string>
    <string name="largeDog">Large</string>
    <string name="shortHaired">Short-haired</string>
    <string name="longHaired">Long-haired</string>
    <string name="mellow">Mellow</string>
    <string name="hyper">Hyper</string>
    <string name="title_activity_splash">Splash</string>

    <!-- Splash screen -->
    <string name="shortTip">Short tip ...</string>
    <string name="title_activity_dog_selection">DogSelection</string>

    <!--Swiper screen -->
    <string name="settings">Settings</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
</resources>
